# INGdb

./: .env.example  README.md  pyproject.toml  requirements.txt
tests/: test_config.py  test_features.py  test_inference.py  test_ingestion.py  test_modeling.py  test_optimize.py
trading_intel/: cli.py  config.py  features.py  inference.py  ingestion.py  init_db.py  logging_utils.py  modeling.py  optimize.py
