[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_intel"
version = "0.1.0"
description = "Trading intelligence scripts"
readme = "README.md"
requires-python = ">=3.8"

# runtime dependencies
dependencies = [
    "pandas",
    "numpy",
    "sqlalchemy",
    "psycopg2-binary",
    "requests",
    "alpha_vantage",
    "praw",
    "web3",
    "python-dotenv",
    "networkx",
    "vaderSentiment",
    "scikit-learn",
    "torch",
    "onnxruntime",
    "pytest",
]

[project.scripts]
ti-cli = "trading_intel.cli:main"

[tool.setuptools]
packages = ["trading_intel"]
